--- a/starter/cloudstorage/src/main/resources/templates/login.html
+++ b/starter/cloudstorage/src/main/resources/templates/login.html
@@ -1,38 +1,125 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/main.css}">
+    <link href="https://fonts.cdnfonts.com/css/open-sans" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" media="all" th:href="@{/img/favicon.ico}">
 
-        <title>Login</title>
-    </head>
-    <body class="p-3 mb-2 bg-light text-black">
-        <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
-            <h1 class="display-5">Login</h1>
-            <form action="#" th:action="@{/login}" method="POST">
-                <div class="alert alert-danger" th:if="${param.error}">
-                    Invalid username or password
-                </div>
-                <div class="alert alert-dark" th:if="${param.logout}">
-                    You have been logged out
-                </div>
-                <div class="form-group">
-                    <label for="inputUsername">Username</label>
-                    <input type="text" class="form-control" name="username" id="inputUsername" placeholder="Enter Username" maxlength="20" required>
-                </div>
-                <div class="form-group">
-                    <label for="inputPassword">Password</label>
-                    <input type="password" class="form-control" name="password" id="inputPassword" placeholder="Enter Password" maxlength="20" required>
-                </div>
-                <button type="submit" class="btn btn-primary" id="login-button">Login</button>
-            </form>
-
-            <div class="form-group" style="margin-top: 0.5em;">
-                <span>Don't have an account yet?</span>
-                <label><a th:href="@{/signup}">Sign up</a></label>
+    <title>Sign In - SuperDuperDrive</title>
+</head>
+<body class="mb-2 bg-light text-black">
+<div class="banner">
+    <img src="https://auth.udacity.com/static/media/logo.08dc9669.svg" alt="logo" class="banner-logo">
+</div>
+<div class="app_content">
+    <div class="tabbed-pane">
+        <div class="tabbed-pane_tabs">
+            <a th:href="@{/signup}" class="tabbed-pane_tab">
+                Sign up
+            </a>
+            <div class="tabbed-pane_tab-selected">
+                Sign in
             </div>
         </div>
-    </body>
+        <div class="tabbed-pane_content">
+            <div class="form-header">
+                <h1 class="form-header_header">
+                    Sign in to your account.
+                </h1>
+                <span class="form-header_description">
+                        <span>
+                            Build skills for today, tomorrow, and beyond.
+                            <br>
+                            Education to future-proof your career.
+                        </span>
+                    </span>
+            </div>
+            <div class="form-alerts">
+                <div class="alert-error" th:if="${param.error}">
+                    Invalid username or password
+                </div>
+                <div class="alert-logout" th:if="${param.logout}">
+                    You have been logged out
+                </div>
+            </div>
+            <div class="provider-buttons">
+                <div class="provider-buttons_google">
+                        <span>
+                            <i class="vds-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24"><g fill="none"><path fill="#4285F4"
+                                                                                                 d="M23.49,12.27 C23.49,11.48 23.42,10.73 23.3,10 L12,10 L12,14.51 L18.47,14.51 C18.18,15.99 17.33,17.24 16.07,18.09 L16.07,21.09 L19.93,21.09 C22.19,19 23.49,15.92 23.49,12.27 Z"></path><path
+                                    fill="#34A853"
+                                    d="M12,24 C15.24,24 17.95,22.92 19.93,21.09 L16.07,18.09 C14.99,18.81 13.62,19.25 12,19.25 C8.87,19.25 6.22,17.14 5.27,14.29 L1.29,14.29 L1.29,17.38 C3.26,21.3 7.31,24 12,24 Z"></path><path
+                                    fill="#FBBC05"
+                                    d="M5.27,14.29 C5.02,13.57 4.89,12.8 4.89,12 C4.89,11.2 5.03,10.43 5.27,9.71 L5.27,6.62 L1.29,6.62 C0.47,8.24 0,10.06 0,12 C0,13.94 0.47,15.76 1.29,17.38 L5.27,14.29 Z"></path><path
+                                    fill="#EA4335"
+                                    d="M12,4.75 C13.77,4.75 15.35,5.36 16.6,6.55 L20.02,3.13 C17.95,1.19 15.24,0 12,0 C7.31,0 3.26,2.7 1.29,6.62 L5.27,9.71 C6.22,6.86 8.87,4.75 12,4.75 Z"></path></g></svg>
+                            </i>
+                            Sign in with Google
+                        </span>
+                </div>
+                <div class="provider-buttons_facebook">
+                        <span>
+                            <i class="vds-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24"><g fill="none" fill-rule="evenodd"><path
+                                    fill="#1877F2"
+                                    d="M24,12 C24,5.37257812 18.6274219,0 12,0 C5.37257813,0 0,5.37257812 0,12 C0,17.9895469 4.38822656,22.9539844 10.125,23.8541719 L10.125,15.46875 L7.078125,15.46875 L7.078125,12 L10.125,12 L10.125,9.35625 C10.125,6.34875 11.9165391,4.6875 14.6575547,4.6875 C15.9705,4.6875 17.34375,4.921875 17.34375,4.921875 L17.34375,7.875 L15.8305547,7.875 C14.3398828,7.875 13.875,8.80000781 13.875,9.74899219 L13.875,12 L17.203125,12 L16.6710937,15.46875 L13.875,15.46875 L13.875,23.8541719 C19.6117734,22.9539844 24,17.9895469 24,12"></path><path
+                                    fill="#FFF"
+                                    d="M16.6710938,15.46875 L17.203125,12 L13.875,12 L13.875,9.74899219 C13.875,8.80000781 14.3398828,7.875 15.8305547,7.875 L17.34375,7.875 L17.34375,4.921875 C17.34375,4.921875 15.9705,4.6875 14.6575547,4.6875 C11.9165391,4.6875 10.125,6.34875 10.125,9.35625 L10.125,12 L7.078125,12 L7.078125,15.46875 L10.125,15.46875 L10.125,23.8541719 C10.7359453,23.9500312 11.362125,24 12,24 C12.637875,24 13.2640547,23.9500312 13.875,23.8541719 L13.875,15.46875 L16.6710938,15.46875 Z"></path></g></svg>
+                            </i>
+                            Sign in with Facebook
+                        </span>
+                </div>
+            </div>
+            <div class="or-separator_contain">
+                <span class="or-separator_or">or</span>
+            </div>
+            <div>
+
+            </div>
+        </div>
+        <form class="form-input d-flex" action="#" th:action="@{/login}" method="POST">
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <label for="inputUsername"></label>
+                    <input type="text" name="username" class="form-control" id="inputUsername" placeholder="Username">
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="col-sm-10">
+                    <label for="inputPassword"></label>
+                    <input type="password" name="password" class="form-control" id="inputPassword"
+                           placeholder="Password">
+                </div>
+            </div>
+            <div class="tos-blurb">
+                    <span>
+                        By clicking "Sign in," you agree to our
+                        <a href="#">Terms of Use</a>
+                        and our
+                        <a href="#">Privacy Policy</a>
+                        .
+                    </span>
+            </div>
+            <button class="vds-button vds-button--primary" type="submit" id="login-button">
+        <span class="vds-button__content">
+                        Sign in
+                    </span>
+            </button>
+        </form>
+        <div class="footer-form">
+            <br>
+            <a href="#" class="branch-refresh-link">Forgot your password?</a>
+            <div class="or-separator_contain or-separator_contain--pdb">
+                <span class="or-separator_or">or</span>
+            </div>
+            <a href="#" class="branch-refresh-link">Sign in with your organization.</a>
+        </div>
+    </div>
+</div>
+</body>
 </html>
